--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>entorno de desarrollo </h1>
     <h2>uso de github</h2>
     <p> prueba  primer cambio </p>
+    <p>segunda prueba</p>
 </body>
 </html>
