--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h2>uso de github</h2>
     <p> prueba  primer cambio </p>
     <p>segunda prueba</p>
+    <p>tercera prueba</p>
 </body>
 </html>
